    * 1174 rms200_temp: New Temperature check for RMS200 Devices
    * 1175 dell_idrac_disks: New Check for Harddisks using Dell iDrac
    * 0644 adva_fsp_if: instead of lower warning and critical levels check now supports lower and upper levels
            NOTE: Please refer to the migration notes!
    * 1006 printer_pages: add Perf-O-Meter and PNP template
    * 1051 FIX: tcp_conn_stats: fix missing performance data...
    * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
    * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
    * 0187 FIX: hp_proliant_power: Fixed Wato configuration
    * 0192 FIX: oracle_rman_backups: Not longer try to make a inventory for broken plugin outputs
    * 0194 FIX: raritan_pdu_inlet: Check now outputs the correct values...
            NOTE: Please refer to the migration notes!
    * 1071 FIX: oracle_rman_backups: Only inventorize ARCHIVELOG / DB FULL / DB INCR entries...
    * 0195 FIX: fc_port: Check temporary disabled cause of problems with automatic detection...
            NOTE: Please refer to the migration notes!
    * 1152 FIX: mk-job: The check now captures currently running jobs and their start time...
    * 0198 FIX: cisco_temp_sensor: Removed dicey detection for temperature value....
    * 0645 FIX: brocade_fcport: since in newer firmware (7.*) swFCPortSpeed is deprecated, we then calculate port speed from IF-MIB::ifHighSpeed

    Multisite:
    * 1066 Implemented Dashboard Designer...
    * 1067 FIX: Fixed login problem in LDAP connector when no user filter specified...
    * 1094 FIX: sidebar snaping 'Tree of folders': fixed exception
    * 1154 FIX: Availability: Fixed unwanted redirect to edit annotation page after editing availability options...

    WATO:
    * 1096 New WATO webservices: manage hosts via webinterface...
    * 1064 FIX: Fixed rare issue with WATO communication in distributed setups (different OS versions)...