@@ -42,7 +42,7 @@ brocade_fcport_inventory_opstates  = [ 1, 2, 3, 4, ]
 brocade_fcport_inventory_admstates = [ 1, 3, 4, ]
 brocade_fcport_inventory_use_portname = True # use swFCPortName as part of service description
 brocade_fcport_inventory_show_isl = True     # add "ISL" to service description for interswitch links
-
+brocade_fcport_inventory = []
 
 
 factory_settings["brocade_fcport_default_levels"] = {
@@ -55,12 +55,12 @@ factory_settings["brocade_fcport_default_levels"] = {
 
 
 # Helper function for computing item from port number
-def brocade_fcport_getitem(ports, index, portname, is_isl):
+def brocade_fcport_getitem(ports, index, portname, is_isl, uses_portname, shows_isl):
     int_len  = str(len(str(len(ports))))
     itemname = ("%0" + int_len + "d") % (index - 1)
-    if is_isl and brocade_fcport_inventory_show_isl:
+    if is_isl and shows_isl:
         itemname += " ISL"
-    if portname.strip() and brocade_fcport_inventory_use_portname:
+    if portname.strip() and uses_portname:
         itemname += " " + portname.strip()
     return itemname
 
@@ -69,6 +69,11 @@ def inventory_brocade_fcport(info):
     # info[0] is port table, info[1] is ISL table
     if len(info) < 2:
         return
+
+    settings = host_extra_conf_merged(g_hostname, brocade_fcport_inventory)
+    uses_portname       = settings.get('use_portname', brocade_fcport_inventory_use_portname)
+    shows_isl           = settings.get('show_isl', brocade_fcport_inventory_show_isl)
+    admstates           = settings.get('admstates', brocade_fcport_inventory_admstates)
 
     inventory = []
     isl_ports = {}
@@ -87,11 +92,11 @@ def inventory_brocade_fcport(info):
             portname = line[13]
             is_isl = line[0] in isl_ports
 
-            if admstate in brocade_fcport_inventory_admstates and \
+            if admstate in admstates and \
                 opstate in brocade_fcport_inventory_opstates  and \
                 phystate in brocade_fcport_inventory_phystates:
 
-                inventory.append(( brocade_fcport_getitem(info[0], index, portname, is_isl),
+                inventory.append(( brocade_fcport_getitem(info[0], index, portname, is_isl, uses_portname, shows_isl),
                    '{ "phystate": [%d], "opstate": [%d], "admstate": [%d] }'
                     % (phystate, opstate, admstate) ))
 
